@@ -43,6 +43,9 @@ action def ActionDef1 {
 - Fix an issue on import that set the default `TransitionFeatureKind` value on accept and do `TransitionFeatureMembership`
 Importing an "accept" `TransitionFeatureMembership` now correctly sets its kind to `trigger`.
 Importing a "do" `TransitionFeatureMembership` now explicitly sets its kind to `effect`.
+- Fix an issue on import that set the default `RequirementConstraintKind` value on require and assume `RequirementConstraintMembership`
+Importing a "require" `RequirementConstraintMembership` now correctly sets its kind to `requirement`.
+Importing an "assume" `RequirementConstraintMembership` now explicitly sets its kind to `assumption`.
 
 == New features
 
