@@ -108,6 +108,9 @@ Exporting a SysML model containing a `FeatureReferenceExpression` now correctly 
 - https://github.com/eclipse-syson/syson/issues/1158[#1158] [import] Fix imported `TransitionFeatureKind` value on accept and do `TransitionFeatureMembership`
 Importing an "accept" `TransitionFeatureMembership` now correctly sets its kind to `trigger`.
 Importing a "do" `TransitionFeatureMembership` now explicitly sets its kind to `effect`.
+- https://github.com/eclipse-syson/syson/issues/1164[#1164] [import] Fix imported `RequirementConstraintKind` value on require and assume `RequirementConstraintMembership`
+Importing a "require" `RequirementConstraintMembership` now correctly sets its kind to `requirement`.
+Importing an "assume" `RequirementConstraintMembership` now explicitly sets its kind to `assumption`.
 
 === Improvements
 
